# tonydestro.com

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy-cloud-run.yml
app/: __init__.py  content.py  heinz_carousel.py  main.py
app/data/: archive_sources.json  experience.json  legacy_tiles.json  profile.json  projects.json
app/templates/: base.html  contact.html  index.html  project.html  projects.html  resume.html
deploy/: artifact-registry-cleanup-policy.json
docs/: cloud-run-ci.md
public-html/: heinz  index.html  large.php
public-html/ae/: index.html
public-html/css/: colorbox.css  foundation.css
public-html/hsfl/: Healthy_Sight_Shell.swf  VideoModule.html  about-the-fund.aspx  contact.aspx  enhance-and-protect.aspx  get-involved.aspx  index.aspx  news.aspx  privacy.aspx  professional-resources.aspx  rss.xml  rss.xsl  template.aspx  terms-and-conditions.aspx  testimonials.aspx  thickbox.css  thickbox.js  vision-scholarships.aspx  web.config
public-html/images/: index.html  logo_images.txt
public-html/js/: foundation.js  pshadow.js
public-html/solfx/: BeInTheKnow.aspx  BeInTheKnow.cs  BeInTheKnow.xml  Drivewear.aspx  DrivewearDemo.aspx  DrivewearTestimonials.aspx  DrivewearTestimonialsDetail.aspx  DrivewearWhatIs.aspx  DrivewearWhereTo.aspx  DrivewearWidget.aspx  ECPfinder.cs  ECPsimple.cs  ECPsimpler.cs  ExperienceVideo.aspx  InteractiveDemo.aspx  PrivacyPolicy.aspx  Results.aspx  Share.aspx  Shield.aspx  Sunglasses_Shell_French.html  ThankYou.aspx  (+14 more)
scripts/: setup_cloud_run_ci.sh
(+455 files in other folders)
