[project]
name = "tonydestro-portfolio"
version = "0.1.0"
description = "Modern portfolio app for Tony Destro."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "jinja2>=3.1,<4.0",
  "numpy>=2.4.4",
  "pillow>=12.2.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[tool.uv]
package = false
